--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <a href="#" role="button" data-toggle="dropdown" class="dropdown-toggle" aria-expanded="false">內政</a>
                         <ul class="dropdown-menu" role="menu">
                             <li ng-repeat="councilor in councilorsByCommittee1">
-                                <a href="#" ng-bind="councilor.FullName" ng-click="fetchIndividual(councilor.LegislatorId)"></a>
+                                <a href="#" ng-bind="councilor.FullName" ng-click="fetchIndividual(councilor.LegislatorId); updateNews(councilor.LegislatorId)"></a>
                             </li>
                         </ul>
                     </li>
@@ -37,7 +37,7 @@
                         <a href="#" role="button" data-toggle="dropdown" class="dropdown-toggle" aria-expanded="false">外交國防</a>
                         <ul class="dropdown-menu" role="menu">
                             <li ng-repeat="councilor in councilorsByCommittee2">
-                                <a href="#" ng-bind="councilor.FullName" ng-click="fetchIndividual(councilor.LegislatorId)"></a>
+                                <a href="#" ng-bind="councilor.FullName" ng-click="fetchIndividual(councilor.LegislatorId); updateNews(councilor.LegislatorId)"></a>
                             </li>
                         </ul>
                     </li>
@@ -45,7 +45,7 @@
                         <a href="#" role="button" data-toggle="dropdown" class="dropdown-toggle" aria-expanded="false">經濟</a>
                         <ul class="dropdown-menu" role="menu">
                             <li ng-repeat="councilor in councilorsByCommittee3">
-                                <a href="#" ng-bind="councilor.FullName" ng-click="fetchIndividual(councilor.LegislatorId)"></a>
+                                <a href="#" ng-bind="councilor.FullName" ng-click="fetchIndividual(councilor.LegislatorId); updateNews(councilor.LegislatorId)"></a>
                             </li>
                         </ul>
                     </li>
@@ -53,7 +53,7 @@
                         <a href="#" role="button" data-toggle="dropdown" class="dropdown-toggle" aria-expanded="false">財政</a>
                         <ul class="dropdown-menu" role="menu">
                             <li ng-repeat="councilor in councilorsByCommittee4">
-                                <a href="#" ng-bind="councilor.FullName" ng-click="fetchIndividual(councilor.LegislatorId)"></a>
+                                <a href="#" ng-bind="councilor.FullName" ng-click="fetchIndividual(councilor.LegislatorId); updateNews(councilor.LegislatorId)"></a>
                             </li>
                         </ul>
                     </li>
@@ -61,7 +61,7 @@
                         <a href="#" role="button" data-toggle="dropdown" class="dropdown-toggle" aria-expanded="false">教育文化</a>
                         <ul class="dropdown-menu" role="menu">
                             <li ng-repeat="councilor in councilorsByCommittee5">
-                                <a href="#" ng-bind="councilor.FullName" ng-click="fetchIndividual(councilor.LegislatorId)"></a>
+                                <a href="#" ng-bind="councilor.FullName" ng-click="fetchIndividual(councilor.LegislatorId); updateNews(councilor.LegislatorId)"></a>
                             </li>
                         </ul>
                     </li>
@@ -69,7 +69,7 @@
                         <a href="#" role="button" data-toggle="dropdown" class="dropdown-toggle" aria-expanded="false">交通</a>
                         <ul class="dropdown-menu" role="menu">
                             <li ng-repeat="councilor in councilorsByCommittee6">
-                                <a href="#" ng-bind="councilor.FullName" ng-click="fetchIndividual(councilor.LegislatorId)"></a>
+                                <a href="#" ng-bind="councilor.FullName" ng-click="fetchIndividual(councilor.LegislatorId); updateNews(councilor.LegislatorId)"></a>
                             </li>
                         </ul>
                     </li>
@@ -77,7 +77,7 @@
                         <a href="#" role="button" data-toggle="dropdown" class="dropdown-toggle" aria-expanded="false">司法法制</a>
                         <ul class="dropdown-menu" role="menu">
                             <li ng-repeat="councilor in councilorsByCommittee7">
-                                <a href="#" ng-bind="councilor.FullName" ng-click="fetchIndividual(councilor.LegislatorId)"></a>
+                                <a href="#" ng-bind="councilor.FullName" ng-click="fetchIndividual(councilor.LegislatorId); updateNews(councilor.LegislatorId)"></a>
                             </li>
                         </ul>
                     </li>
@@ -85,7 +85,7 @@
                         <a href="#" role="button" data-toggle="dropdown" class="dropdown-toggle" aria-expanded="false">社福還衛</a>
                         <ul class="dropdown-menu" role="menu">
                             <li ng-repeat="councilor in councilorsByCommittee8">
-                                <a href="#" ng-bind="councilor.FullName" ng-click="fetchIndividual(councilor.LegislatorId)"></a>
+                                <a href="#" ng-bind="councilor.FullName" ng-click="fetchIndividual(councilor.LegislatorId); updateNews(councilor.LegislatorId)"></a>
                             </li>
                         </ul>
                     </li>
