--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE>
-<html ng-app="app" lang="zhtw">
+<html ng-app="app">
 
 <head>
     <title>Council Monitoring</title>
@@ -11,8 +11,7 @@
 </head>
 
 <body ng-controller="AppCtrl">
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-default " role="navigation">
+    <nav class="navbar navbar-default nav-style" role="navigation">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -26,7 +25,7 @@
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li class="dropdown">
-                        <a href="#" role="button" data-toggle="dropdown" class="dropdown-toggle" aria-expanded="false">內政</a>
+                        <a href="#">內政</a>
                         <ul class="dropdown-menu" role="menu">
                             <li ng-repeat="councilor in councilorsByCommittee1" ng-hide="councilor.IsResignation">
                                 <a href="#" ng-bind="councilor.FullName" ng-click="fetchIndividual(councilor.LegislatorId); updateNews(councilor.LegislatorId)"></a>
@@ -34,7 +33,7 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" role="button" data-toggle="dropdown" class="dropdown-toggle" aria-expanded="false">外交國防</a>
+                        <a href="#">外交國防</a>
                         <ul class="dropdown-menu" role="menu">
                             <li ng-repeat="councilor in councilorsByCommittee2" ng-hide="councilor.IsResignation">
                                 <a href="#" ng-bind="councilor.FullName" ng-click="fetchIndividual(councilor.LegislatorId); updateNews(councilor.LegislatorId)"></a>
@@ -42,7 +41,7 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" role="button" data-toggle="dropdown" class="dropdown-toggle" aria-expanded="false">經濟</a>
+                        <a href="#">經濟</a>
                         <ul class="dropdown-menu" role="menu">
                             <li ng-repeat="councilor in councilorsByCommittee3" ng-hide="councilor.IsResignation">
                                 <a href="#" ng-bind="councilor.FullName" ng-click="fetchIndividual(councilor.LegislatorId); updateNews(councilor.LegislatorId)"></a>
@@ -50,7 +49,7 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" role="button" data-toggle="dropdown" class="dropdown-toggle" aria-expanded="false">財政</a>
+                        <a href="#">財政</a>
                         <ul class="dropdown-menu" role="menu">
                             <li ng-repeat="councilor in councilorsByCommittee4" ng-hide="councilor.IsResignation">
                                 <a href="#" ng-bind="councilor.FullName" ng-click="fetchIndividual(councilor.LegislatorId); updateNews(councilor.LegislatorId)"></a>
@@ -58,7 +57,7 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" role="button" data-toggle="dropdown" class="dropdown-toggle" aria-expanded="false">教育文化</a>
+                        <a href="#">教育文化</a>
                         <ul class="dropdown-menu" role="menu">
                             <li ng-repeat="councilor in councilorsByCommittee5" ng-hide="councilor.IsResignation">
                                 <a href="#" ng-bind="councilor.FullName" ng-click="fetchIndividual(councilor.LegislatorId); updateNews(councilor.LegislatorId)"></a>
@@ -66,7 +65,7 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" role="button" data-toggle="dropdown" class="dropdown-toggle" aria-expanded="false">交通</a>
+                        <a href="#">交通</a>
                         <ul class="dropdown-menu" role="menu">
                             <li ng-repeat="councilor in councilorsByCommittee6" ng-hide="councilor.IsResignation">
                                 <a href="#" ng-bind="councilor.FullName" ng-click="fetchIndividual(councilor.LegislatorId); updateNews(councilor.LegislatorId)"></a>
@@ -74,7 +73,7 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" role="button" data-toggle="dropdown" class="dropdown-toggle" aria-expanded="false">司法法制</a>
+                        <a href="#">司法法制</a>
                         <ul class="dropdown-menu" role="menu">
                             <li ng-repeat="councilor in councilorsByCommittee7" ng-hide="councilor.IsResignation">
                                 <a href="#" ng-bind="councilor.FullName" ng-click="fetchIndividual(councilor.LegislatorId); updateNews(councilor.LegislatorId)"></a>
@@ -82,7 +81,7 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" role="button" data-toggle="dropdown" class="dropdown-toggle" aria-expanded="false">社福還衛</a>
+                        <a href="#">社福還衛</a>
                         <ul class="dropdown-menu" role="menu">
                             <li ng-repeat="councilor in councilorsByCommittee8" ng-hide="councilor.IsResignation">
                                 <a href="#" ng-bind="councilor.FullName" ng-click="fetchIndividual(councilor.LegislatorId); updateNews(councilor.LegislatorId)"></a>
@@ -90,8 +89,19 @@
                         </ul>
                     </li>
                 </ul>
+
+                <div class="pull-right col-xs-3  header-searchbar">
+                    <form class="navbar-form" role="search">
+                        <div class="input-group">
+                            <input type="text" class="form-control" ng-model="searchTarget" placeholder="請輸入議員名字">
+                            <div class="input-group-btn">
+                                <button class="btn btn-success" ng-click="search(searchTarget); searchTarget=''"><i class="glyphicon glyphicon-search"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
-            <!--/.nav-collapse -->
         </div>
     </nav>
     <div class="container">
@@ -104,7 +114,7 @@
                 <hr>
                 <ul class="content">
                     <li ng-repeat="committee in individual.Committees">
-                        <a href="#" ng-click="fetchAnalysis(individual.LegislatorId, committee.MeetingSession); updateNews(individual.LegislatorId, committee.MeetingSession)">第8屆第{{committee.MeetingSession}}會期: {{committee.CommitteeName}}</a>
+                        <a href="#" ng-click="fetchAnalysis(individual.LegislatorId, committee.MeetingSession);">第8屆第{{committee.MeetingSession}}會期: {{committee.CommitteeName}}</a>
                         <span class="label label-success" ng-show="committee.Type == 1">優秀</span>
                         <span class="label label-warning" ng-show="committee.Type == 2">待觀察</span>
                     </li>
@@ -126,12 +136,6 @@
             </div>
         </div>
     </div>
-
-    <footer class="footer">
-        <div class="container">
-            <p class="text-muted">多奇數位</p>
-        </div>
-    </footer>
 
 
 
