enhance the search bar

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li class="dropdown">
                         <a href="#">內政</a>
                         <ul class="dropdown-menu" role="menu">
-                            <li ng-repeat="councilor in councilorsByCommittee1" ng-hide="councilor.IsResignation || councilor.LegislatorId == 29" ng-click="fetchIndividual(councilor.LegislatorId); updateNews(councilor.LegislatorId)">
+                            <li ng-repeat="councilor in councilorsByCommittee1" ng-hide="councilor.IsResignation" ng-click="fetchIndividual(councilor.LegislatorId); updateNews(councilor.LegislatorId)">
                                 <div class="party-pic" ng-class="{blue: councilor.Party === '中國國民黨', green: councilor.Party === '民主進步黨', orange: councilor.Party === '親民黨', black: councilor.Party === '無黨籍', red: councilor.Party === '無黨團結聯盟', none: councilor.Party === '台灣團結聯盟',}"></div>
                                 <a href="#" ng-bind="councilor.FullName"></a>
                             </li>
@@ -101,18 +101,18 @@
                 <div class="pull-right col-md-3 header-searchbar">
                     <form class="navbar-form" role="search">
                         <div class="input-group">
-                            <input type="text" class="form-control" ng-model="searchTarget" placeholder="請輸入委員姓名" ng-change="suggest()">
+                            <input type="text" class="form-control" ng-model="searchTarget" placeholder="請輸入委員姓名" ng-change="suggest()" ng-keydown="pickSuggestion($event, suggestions)">
                             <div class="input-group-btn">
                                 <button class="btn btn-success" ng-click="search(searchTarget);"><i class="glyphicon glyphicon-search"></i>
                                 </button>
                             </div>
                         </div>
                     </form>
-
                     <ul class="pull-right col-md-3 suggestions" ng-show="suggestions">
-                        <li ng-repeat="suggestion in suggestions" ng-click="setTarget(suggestion);" ng-bind="suggestion"></li>
+                        <li ng-repeat="suggestion in suggestions" ng-click="setTarget(suggestion);" ng-bind="suggestion" ng-class="{picked: suggestions[suggestionIndex] == suggestion}" ng-mouseover="hoverSuggestion(suggestion)"></li>
                     </ul>
                 </div>
+
             </div>
         </div>
     </nav>
@@ -129,12 +129,11 @@
                 <hr>
                 <ul class="content">
                     <li ng-repeat="committee in individual.Committees">
-                        <div href="#" ng-click="meetingSessionClick($event, committee)" 
-                        ng-class="{clickable: !checkAnalysis(individual.LegislatorId, committee.MeetingSession)}">第8屆第<span ng-bind="committee.MeetingSession"></span>會期: <span ng-bind="committee.CommitteeName"></span>
+                        <div href="#" ng-click="meetingSessionClick($event, committee)" ng-class="{clickable: hasData(individual.LegislatorId, committee.MeetingSession)}">第8屆第<span ng-bind="committee.MeetingSession"></span>會期: <span ng-bind="committee.CommitteeName"></span>
                         </div>
                         <span class="label label-success" ng-show="committee.Type == 1">優秀</span>
                         <span class="label label-warning" ng-show="committee.Type == 2">待觀察</span>
-                        <span class="label label-info" ng-hide="committee.MeetingSession !== current.target">目前</span>
+                        <span class="label label-info" ng-hide="committee.MeetingSession !== current.target">查看中</span>
                     </li>
                 </ul>
                 <h2>聯絡方式</h2>
@@ -147,14 +146,18 @@
                 </ul>
             </div>
             <div class="col-md-7">
-                <h2 class="text-center analysis">整體分析</h2>
-                <div class="chart-wrapper">
-                    <div id="radar-chart" class="text-center"></div>
+                <div ng-hide="individual.LegislatorId == 29">
+                    <h2 class="text-center analysis">整體分析</h2>
+                    <div class="chart-wrapper">
+                        <div id="radar-chart" class="text-center"></div>
+                    </div>
                 </div>
 
-                <h2 class="text-center">新聞評價</h2>
-                <div class="chart-wrapper">
-                    <div id="chart"></div>
+                <div>
+                    <h2 class="text-center">新聞評價</h2>
+                    <div class="chart-wrapper">
+                        <div id="chart"></div>
+                    </div>
                 </div>
 
             </div>
