--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE>
+﻿<!DOCTYPE>
 <html ng-app="app">
 
 <head>
@@ -22,80 +22,18 @@
                 </button>
                 <a class="navbar-brand" href="#">評鑑立委</a>
             </div>
+
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="dropdown">
-                        <a href="#">內政</a>
+                    <li class="dropdown" ng-repeat="type in types">
+                        <a href="#" ng-bind="type.name"></a>
                         <ul class="dropdown-menu" role="menu">
-                            <li ng-repeat="councilor in councilorsByCommittee1" ng-hide="councilor.IsResignation" ng-click="fetchIndividual(councilor.LegislatorId); updateNews(councilor.LegislatorId)">
+                            <li ng-repeat="councilor in type.committeeId" ng-hide="councilor.IsResignation" ng-click="loadData(councilor.LegislatorId)">
                                 <div class="party-pic" ng-class="{blue: councilor.Party === '中國國民黨', green: councilor.Party === '民主進步黨', orange: councilor.Party === '親民黨', black: councilor.Party === '無黨籍', red: councilor.Party === '無黨團結聯盟', none: councilor.Party === '台灣團結聯盟',}"></div>
                                 <a href="#" ng-bind="councilor.FullName"></a>
                             </li>
                         </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#">外交國防</a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li ng-repeat="councilor in councilorsByCommittee2" ng-hide="councilor.IsResignation" ng-click="fetchIndividual(councilor.LegislatorId); updateNews(councilor.LegislatorId)">
-                                <div class="party-pic" ng-class="{blue: councilor.Party === '中國國民黨', green: councilor.Party === '民主進步黨', orange: councilor.Party === '親民黨', black: councilor.Party === '無黨籍', red: councilor.Party === '無黨團結聯盟', none: councilor.Party === '台灣團結聯盟',}"></div>
-                                <a href="#" ng-bind="councilor.FullName"></a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#">經濟</a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li ng-repeat="councilor in councilorsByCommittee3" ng-hide="councilor.IsResignation" ng-click="fetchIndividual(councilor.LegislatorId); updateNews(councilor.LegislatorId)">
-                                <div class="party-pic" ng-class="{blue: councilor.Party === '中國國民黨', green: councilor.Party === '民主進步黨', orange: councilor.Party === '親民黨', black: councilor.Party === '無黨籍', red: councilor.Party === '無黨團結聯盟', none: councilor.Party === '台灣團結聯盟',}"></div>
-                                <a href="#" ng-bind="councilor.FullName"></a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#">財政</a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li ng-repeat="councilor in councilorsByCommittee4" ng-hide="councilor.IsResignation" ng-click="fetchIndividual(councilor.LegislatorId); updateNews(councilor.LegislatorId)">
-                                <div class="party-pic" ng-class="{blue: councilor.Party === '中國國民黨', green: councilor.Party === '民主進步黨', orange: councilor.Party === '親民黨', black: councilor.Party === '無黨籍', red: councilor.Party === '無黨團結聯盟', none: councilor.Party === '台灣團結聯盟',}"></div>
-                                <a href="#" ng-bind="councilor.FullName"></a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#">教育文化</a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li ng-repeat="councilor in councilorsByCommittee5" ng-hide="councilor.IsResignation" ng-click="fetchIndividual(councilor.LegislatorId); updateNews(councilor.LegislatorId)">
-                                <div class="party-pic" ng-class="{blue: councilor.Party === '中國國民黨', green: councilor.Party === '民主進步黨', orange: councilor.Party === '親民黨', black: councilor.Party === '無黨籍', red: councilor.Party === '無黨團結聯盟', none: councilor.Party === '台灣團結聯盟',}"></div>
-                                <a href="#" ng-bind="councilor.FullName"></a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#">交通</a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li ng-repeat="councilor in councilorsByCommittee6" ng-hide="councilor.IsResignation" ng-click="fetchIndividual(councilor.LegislatorId); updateNews(councilor.LegislatorId)">
-                                <div class="party-pic" ng-class="{blue: councilor.Party === '中國國民黨', green: councilor.Party === '民主進步黨', orange: councilor.Party === '親民黨', black: councilor.Party === '無黨籍', red: councilor.Party === '無黨團結聯盟', none: councilor.Party === '台灣團結聯盟',}"></div>
-                                <a href="#" ng-bind="councilor.FullName"></a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#">司法法制</a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li ng-repeat="councilor in councilorsByCommittee7" ng-hide="councilor.IsResignation" ng-click="fetchIndividual(councilor.LegislatorId); updateNews(councilor.LegislatorId)">
-                                <div class="party-pic" ng-class="{blue: councilor.Party === '中國國民黨', green: councilor.Party === '民主進步黨', orange: councilor.Party === '親民黨', black: councilor.Party === '無黨籍', red: councilor.Party === '無黨團結聯盟', none: councilor.Party === '台灣團結聯盟',}"></div>
-                                <a href="#" ng-bind="councilor.FullName"></a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#">社福還衛</a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li ng-repeat="councilor in councilorsByCommittee8" ng-hide="councilor.IsResignation" ng-click="fetchIndividual(councilor.LegislatorId); updateNews(councilor.LegislatorId)">
-                                <div class="party-pic" ng-class="{blue: councilor.Party === '中國國民黨', green: councilor.Party === '民主進步黨', orange: councilor.Party === '親民黨', black: councilor.Party === '無黨籍', red: councilor.Party === '無黨團結聯盟', none: councilor.Party === '台灣團結聯盟',}"></div>
-                                <a href="#" ng-bind="councilor.FullName"></a>
-                            </li>
-                        </ul>
-                    </li>
+                    </li>>
                 </ul>
 
                 <div class="pull-right col-md-3 header-searchbar">
@@ -103,7 +41,8 @@
                         <div class="input-group">
                             <input type="text" class="form-control" ng-model="searchTarget" placeholder="請輸入委員姓名" ng-change="suggest()" ng-keydown="pickSuggestion($event, suggestions)">
                             <div class="input-group-btn">
-                                <button class="btn btn-success" ng-click="search(searchTarget);"><i class="glyphicon glyphicon-search"></i>
+                                <button class="btn btn-success" ng-click="search(searchTarget);">
+                                    <i class="glyphicon glyphicon-search"></i>
                                 </button>
                             </div>
                         </div>
@@ -112,12 +51,9 @@
                         <li ng-repeat="suggestion in suggestions" ng-click="setTarget(suggestion);" ng-bind="suggestion" ng-class="{picked: suggestions[suggestionIndex] == suggestion}" ng-mouseover="hoverSuggestion(suggestion)"></li>
                     </ul>
                 </div>
-
             </div>
         </div>
     </nav>
-
-
 
     <div class="container">
         <div class="row">
@@ -129,7 +65,8 @@
                 <hr>
                 <ul class="content">
                     <li ng-repeat="committee in individual.Committees">
-                        <div href="#" ng-click="meetingSessionClick($event, committee)" ng-class="{clickable: hasData(individual.LegislatorId, committee.MeetingSession)}">第8屆第<span ng-bind="committee.MeetingSession"></span>會期: <span ng-bind="committee.CommitteeName"></span>
+                        <div href="#" ng-click="meetingSessionClick($event, committee)" ng-class="{clickable: hasData(individual.LegislatorId, committee.MeetingSession)}">
+                            第8屆第<span ng-bind="committee.MeetingSession"></span>會期: <span ng-bind="committee.CommitteeName"></span>
                         </div>
                         <span class="label label-success" ng-show="committee.Type == 1">優秀</span>
                         <span class="label label-warning" ng-show="committee.Type == 2">待觀察</span>
@@ -146,7 +83,7 @@
                 </ul>
             </div>
             <div class="col-md-7">
-                <div ng-hide="individual.LegislatorId == 29">
+                <div ng-hide="isAnalysisEmpty(individual.LegislatorId)">
                     <h2 class="text-center analysis">整體分析</h2>
                     <div class="chart-wrapper">
                         <div id="radar-chart" class="text-center"></div>
@@ -159,7 +96,6 @@
                         <div id="chart"></div>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
